--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    </div>
    
 
-   <button class="restablecer" type="button"onclick="restablecer()">Restablecer</button>
+   <button class="restablecer" type="button"onclick="restablecer()">Reset</button>
   </div>
   <div id="seconds">
 
