--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    
   
    
-   <button class="on" type="button"onclick="apagar()">OFF</button>
+   <button class="on apagar" type="button"onclick="apagar()">OFF</button>
    <button class="off"type="button"onclick="off()">STOP</button>
    <button class="on"type="button" onclick="on()">ON/PLAY</button>
    <br>
